--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,17 +1,18 @@
-# Async adapter only works within the same process, so for manually triggering cable updates from a console,
-# and seeing results in the browser, you must do so from the web console (running inside the dev process),
-# not a terminal started via bin/rails console! Add "console" to any action or any ERB template view
-# to make the web console appear.
+default: &default
+  adapter: redis
+  url: <%= ENV.fetch('REDIS_URL', 'redis://redis:6379') %>
+  password: <%= ENV.fetch('REDIS_PASSWORD', nil).presence %>
+  channel_prefix: <%= "task_#{Rails.env}_action_cable" %>
+
 development:
-  adapter: async
+  <<: *default
 
 test:
   adapter: test
+  channel_prefix: <%= "task_#{Rails.env}_action_cable"  %>
+
+staging:
+  <<: *default
 
 production:
-  adapter: solid_cable
-  connects_to:
-    database:
-      writing: cable
-  polling_interval: 0.1.seconds
-  message_retention: 1.day
+  <<: *default
